asteria/core/tests/errors/elaboration_errors/cannot_synthesize_type_for_lambda_term.asteriacore
x : forall {a : Type}. a
  = (\y -> y) x
  ;;
